--- a/source/public/chat.html
+++ b/source/public/chat.html
@@ -23,7 +23,7 @@
             <div class="compose">
                 <form action="/send" class="formclass" method="post" id="message-form">
                     <input type="text" class='msginput' name="message" id="text" placeholder="Type a message"><br>
-                    <input type="hidden" name="submit" id="button">
+                    <input type="submit" name="submit" id="button">
                 </form>
 
                 <button id="send-location">Send Location</button>
